Extends the case model
